# mqtt-forwarder-deploy

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.optimized  LICENSE  PROJECT_STRUCTURE.md  README.md  config.json  docker-compose.yml  docker-run.sh  package.sh  test_config.json
.github/workflows/: docker.yml  test.yml
common/: config.h  logger.h  message_handlers.h  mqtt_engine.h
legacy/: CMakeLists.txt  mqtt_forwarder.c
modular/: CMakeLists.txt  message_handlers.c
paho/: CMakeLists.txt  mqtt_forwarder_paho.c
src/: config.h  config_json.c  config_json.h  logger.h  main.c  message_handlers.c  message_handlers.h  mqtt_engine.c  mqtt_engine.h
tests/: Dockerfile.test  docker-compose.test.yml  invalid_config.json  invalid_json_config.json  mqtt_benchmark.py  no_rules_config.json  perf_config.json  performance_test.py  resource_stress_test.py  run_performance_test.sh  run_tests.sh  test_config.json
tests/results/: mqtt_benchmark_report.md  performance_report.md  performance_results.json
